// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row component should render with given styles 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      Object {
        "padding": 10,
      },
    ]
  }
>
  <ForwardRef(View) />
</ForwardRef(View)>
`;

exports[`Row component should render with no styles 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <ForwardRef(View) />
</ForwardRef(View)>
`;
